# scooby_in_the_house

./: .gitignore  README-docker.md  README.md  docker-compose.full.yml  docker-compose.yml  nohup.out  package-lock.json  package.json
.cursor/rules/: python-env.mdc  python-unit-tests.mdc
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240413_114100_b4a2b0648ef4_properties_and_tasks.py  20240413_123400_2f5f47de9b04_add_image_urls.py  b4a2b0648ef4_properties_and_tasks.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/core/usecases/: __init__.py  property_usecases.py  scraper_usecases.py
backend/app/db/: __init__.py
backend/app/db/repositories/: __init__.py  property_repository.py  task_repository.py
backend/app/models/: __init__.py  property.py  task.py
backend/app/schemas/: __init__.py  property.py  task.py
backend/app/scrapers/: __init__.py  fincaraiz.py
backend/app/services/: scraper_service.py
backend/scripts/: start.sh
backend/tests/core/usecases/: test_property_usecases.py  test_scraper_usecases.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts  propertiesApi.ts  scraperApi.ts
frontend/src/components/: Home.tsx  NotFound.tsx  PropertyScraper.css  PropertyScraper.tsx  index.ts
frontend/src/hooks/: index.ts  useFilterUI.ts  useForm.ts  usePropertyFilters.ts  usePropertyMutations.ts  (+2 more)
(+18 files in other folders)
