[project]
name = "scooby_in_the_house"
version = "0.1.0"
description = "Real estate scraper for Colombian properties"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.2.1",
    "httpx==0.26.0",
    "beautifulsoup4==4.12.2",
    "aiohttp==3.9.3",
    "sqlalchemy==2.0.27",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "lxml==5.1.0",
    "selenium==4.18.1",
    "webdriver-manager==4.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=7.4.4",
    "types-beautifulsoup4>=4.12.0.20250204",
]
